@@ -4,6 +4,8 @@
 
 EAPI=5
 
+inherit check-reqs
+
 DESCRIPTION="Open Handset Alliance's Android NDK (Native Dev Kit)"
 HOMEPAGE="http://developer.android.com/sdk/ndk/"
 SRC_URI="x86? (	http://dl.google.com/android/ndk/${PN}-r${PV}-linux-x86.bin )
@@ -25,6 +27,8 @@ ANDROID_NDK_DIR="opt/${PN}"
 
 QA_PREBUILT="*"
 
+CHECKREQS_DISK_BUILD="3300M"
+
 src_unpack() {
 	local my_a
 	for my_a in ${A} ; do
@@ -41,8 +45,16 @@ src_compile() {
 }
 
 src_install() {
+	ANDROID_PREFIX="${EPREFIX}/${ANDROID_NDK_DIR}"
+	ANDROID_PATH="${EPREFIX}/${ANDROID_NDK_DIR}"
+
+	for i in toolchains/*/prebuilt/linux-*/bin
+	do
+		ANDROID_PATH="${ANDROID_PATH}:${ANDROID_PREFIX}/${i}"
+	done
+
 	dodir "/${ANDROID_NDK_DIR}"
-	cp -pPR * "${ED}/${ANDROID_NDK_DIR}" || die
+	mv * "${ED}/${ANDROID_NDK_DIR}" || die
 
 	fowners -R root:android "/${ANDROID_NDK_DIR}"
 	fperms 0775 "/${ANDROID_NDK_DIR}/"{,build,docs,platforms,samples}
@@ -51,14 +63,6 @@ src_install() {
 	dodir "/${ANDROID_NDK_DIR}/out"
 	fowners root:android "/${ANDROID_NDK_DIR}/out"
 	fperms 3775 "/${ANDROID_NDK_DIR}/out"
-
-	ANDROID_PREFIX="${EPREFIX}/${ANDROID_NDK_DIR}"
-	ANDROID_PATH="${EPREFIX}/${ANDROID_NDK_DIR}"
-
-	for i in toolchains/*/prebuilt/linux-*/bin
-	do
-		ANDROID_PATH="${ANDROID_PATH}:${ANDROID_PREFIX}/${i}"
-	done
 
 	printf '%s' \
 		"PATH=\"${ANDROID_PATH}\"" \
